deploy/v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: origin-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: origin
        version: v1
    spec:
      restartPolicy: Always
      ##########################如果需要在docker中添加hosts#########################
      #      hostAliases:
      #        - ip: "172.16.2.37"
      #          hostnames:
      #          - "grpc-smsbffp.example.com"
      #          - "grpc-wxcbbffp.example.com"
      #          - "grpc-timerbffp.example.com"
      ###########################################################################
      imagePullSecrets:
        - name: bffp-key  #使用镜像密钥,在阿里云后台提前创建
      containers:
        - name: origin
          image: registry.cn-beijing.aliyuncs.com/exampleprod/origin:v1.0.0.1
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 50051
              name: grpc-port
          imagePullPolicy: Always #总是拉取镜像
---
