deploy/v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: origin-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: origin
        version: v2
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: bffp-key  #使用镜像密钥,在阿里云后台提前创建
      containers:
        - name: origin
          image: registry.cn-beijing.aliyuncs.com/zhugeprod/origin:v1.0.0.1
          ports:
            - containerPort: 80
              name: http-port
            - containerPort: 50051
              name: grpc-port
          imagePullPolicy: Always #总是拉取镜像
---
